[package]
name = "game_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.66"
identity_iota = { version = "0.7.0-alpha" }
iota-client = { version = "2.0.1-rc.6" }
pyo3 = { version = "0.16.0" }
anyhow = "1.0"
chrono = "0.4"
termion = "1.5.6"