[package]
name = "game_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
identity_iota = { version = "0.7.0-alpha" }
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "develop" ,features=["mqtt"]} 
pyo3 = { version = "0.16.0" }
anyhow = "1.0"
chrono = "0.4"
termion = "1.5.6"
futures = "0.3"
num_cpus = "1.15.0"